--- a/index.html
+++ b/index.html
@@ -130,7 +130,11 @@
     </div>
     <div class="container" style="margin-top: 65px;max-width: 780px;">
         <h1 style="font-size: 30px;font-weight: bold;">Offered Placement CTC</h1>
-        <p>Paragraph</p>
+
+        <!-- <p>Paragraph</p> -->
+        <div>
+            <canvas id="myChart"></canvas>
+        </div>
         <div class="slide-container swiper">
             <div class="slide-content">
                 <div class="card-wrapper swiper-wrapper">
@@ -248,24 +252,36 @@
                 </div>
                 <div class="row">
                     <div class="col" style="padding-top: 10px;">
-                        <h1 style="font-size: 16px;"><strong>Placements Activities Contact</strong></h1>
-                        <p style="font-size: 14px;margin-bottom: 8px;"><strong>Dr. Rajendra Hegadi</strong></p>
-                        <p style="font-size: 12px;line-height: 0px;"><strong>cgc@iiitdwd.ac.in</strong></p>
+                        <h1 style="font-size: 16px;"><strong>Technical Events Contact</strong></h1>
+                        <p style="font-size: 14px;margin-bottom: 8px;"><strong>Dr. Sunil Saumya</strong></p>
+                        <p style="font-size: 12px;line-height: 0px;"><strong>sunil.saumya@iiitdwd.ac.in</strong></p>
                     </div>
                     <div class="col" style="padding-top: 10px;">
-                        <h1 style="font-size: 16px;"><strong>Placements Activities Contact</strong></h1>
+                        <!-- <h1 style="font-size: 16px;"><strong>Placements Activities Contact</strong></h1>
                         <p style="font-size: 14px;margin-bottom: 8px;"><strong>Dr. Rajendra Hegadi</strong></p>
-                        <p style="font-size: 12px;line-height: 0px;"><strong>cgc@iiitdwd.ac.in</strong></p>
+                        <p style="font-size: 12px;line-height: 0px;"><strong>cgc@iiitdwd.ac.in</strong></p> -->
+                        <h1 style="font-size: 16px;"><strong>Student Lead Coordinators</strong></h1>
+                        <p style="font-size: 12px;margin-bottom: 8px;"><strong>Om Morendha</strong></p>
+                        <p style="font-size: 12px;line-height: 0px;"><strong>20bcs095@iiitdwd.ac.in</strong></p>
+                        <p style="font-size: 12px;margin-bottom: 8px;"><strong>Shreyas Bulbule</strong></p>
+                        <p style="font-size: 12px;line-height: 0px;"><strong>20bds050@iiitdwd.ac.in</strong></p>
+                        <p style="font-size: 12px;margin-bottom: 8px;"><strong>Gaurang Belekar</strong></p>
+                        <p style="font-size: 12px;line-height: 0px;"><strong>20bec015@iiitdwd.ac.in</strong></p>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <h1 style="font-size: 16px;"><strong>Placements Activities Contact</strong></h1>
-                <p style="font-size: 12px;margin-bottom: 8px;"><strong>Dr. Rajendra Hegadi</strong></p>
-                <p style="font-size: 12px;margin-bottom: 8px;"><strong>Dr. Rajendra Hegadi</strong></p>
-                <p style="font-size: 12px;margin-bottom: 8px;"><strong>Dr. Rajendra Hegadi</strong></p>
-                <p style="font-size: 12px;margin-bottom: 8px;"><strong>Dr. Rajendra Hegadi</strong></p>
-                <p style="font-size: 12px;margin-bottom: 8px;"><strong>Dr. Rajendra Hegadi</strong></p>
+                <h1 style="font-size: 16px;"><strong>Student Coordinators</strong></h1>
+                <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong></p>
+                <p style="font-size: 12px;line-height: 0px;"><strong>20bds013@iiitdwd.ac.in</strong></p>
+                <p style="font-size: 12px;margin-bottom: 8px;"><strong>B Tarun</strong></p>
+                <p style="font-size: 12px;line-height: 0px;"><strong>20bcs025@iiitdwd.ac.in</strong></p>
+                <p style="font-size: 12px;margin-bottom: 8px;"><strong>Poornima</strong></p>
+                <p style="font-size: 12px;line-height: 0px;"><strong>20bds040@iiitdwd.ac.in</strong></p>
+                <p style="font-size: 12px;margin-bottom: 8px;"><strong>B Tarun</strong></p>
+                <p style="font-size: 12px;line-height: 0px;"><strong>20bcs025@iiitdwd.ac.in</strong></p>
+                <p style="font-size: 12px;margin-bottom: 8px;"><strong>Poornima</strong></p>
+                <p style="font-size: 12px;line-height: 0px;"><strong>20bds040@iiitdwd.ac.in</strong></p>
             </div>
         </div>
     </div>
@@ -298,6 +314,53 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+    const ctx = document.getElementById('myChart');
+    const averageCtcData = [6, 7, 7.3, 8, 11.52];
+    const highestCtcData = [10, 11, 25, 25, 35];
+
+  
+    new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: ["2019", "2020", "2021", "2022", "2023"],
+        datasets: [
+            {
+            label: "Average CTC",
+            data: averageCtcData,
+            backgroundColor: "#50A5CC", // This is the new line
+            borderColor: "rgba(54, 162, 235, 1)", // This is the new line
+            },
+            {
+            label: "Highest CTC",
+            data: highestCtcData,
+            backgroundColor: "#051F42", // This is the new line
+            borderColor: "rgba(255, 99, 132, 1)", // This is the new line
+
+            },
+        ],
+
+      },
+      options: {
+        indexAxis: "y", // This is the new line
+        title: {
+        display: true,
+        text: "Average and Highest CTC by Year",
+        },
+        scales: {
+        yAxes: [
+            {
+            ticks: {
+                beginAtZero: true,
+            },
+            },
+        ],
+        },
+    },
+
+        });
+  </script>
 <script>
     var swiper = new Swiper(".slide-content", {
         slidesPerView: 3,
