--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <div class="container" style="margin-top: 65px;max-width: 780px;">
         <h1 style="font-size: 30px;font-weight: bold;">Contact</h1>
         <div class="row" style="margin-top: 25px;">
-            <div class="col-lg-8">
+            <div class="col-lg-7">
                 <div class="row">
                     <div class="col">
                         <h1 style="font-size: 16px;"><strong>Placements Activities Contact</strong></h1>
@@ -272,16 +272,21 @@
             </div>
             <div class="col">
                 <h1 style="font-size: 16px;"><strong>Student Coordinators</strong></h1>
-                <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong></p>
-                <p style="font-size: 12px;line-height: 0px;"><strong>20bds013@iiitdwd.ac.in</strong></p>
-                <p style="font-size: 12px;margin-bottom: 8px;"><strong>B Tarun</strong></p>
-                <p style="font-size: 12px;line-height: 0px;"><strong>20bcs025@iiitdwd.ac.in</strong></p>
-                <p style="font-size: 12px;margin-bottom: 8px;"><strong>Poornima</strong></p>
-                <p style="font-size: 12px;line-height: 0px;"><strong>20bds040@iiitdwd.ac.in</strong></p>
-                <p style="font-size: 12px;margin-bottom: 8px;"><strong>B Tarun</strong></p>
-                <p style="font-size: 12px;line-height: 0px;"><strong>20bcs025@iiitdwd.ac.in</strong></p>
-                <p style="font-size: 12px;margin-bottom: 8px;"><strong>Poornima</strong></p>
-                <p style="font-size: 12px;line-height: 0px;"><strong>20bds040@iiitdwd.ac.in</strong></p>
+                <div style="line-height: 12px;">
+
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
+                </div>
             </div>
         </div>
     </div>
