--- a/index.html
+++ b/index.html
@@ -135,64 +135,64 @@
         <div>
             <canvas id="myChart"></canvas>
         </div>
-        <div class="slide-container swiper">
-            <div class="slide-content">
-                <div class="card-wrapper swiper-wrapper">
-                    <div class="card swiper-slide">
-                        <div class="card-content">
-                            <h2 class="name" style="color:#013365;">Outcome-Based Education Emphasis</h2>
-                            <p class="description">Demonstrates that students are trained to meet specific objectives, indicating their skills are parallel to industry needs.</p>
-                        </div>
+    </div>
+    <div class="slide-container swiper mt-2">
+        <div class="slide-content">
+            <div class="card-wrapper swiper-wrapper">
+                <div class="card swiper-slide">
+                    <div class="card-content">
+                        <h2 class="name" style="color:#013365;">Outcome-Based Education Emphasis</h2>
+                        <p class="description">Demonstrates that students are trained to meet specific objectives, indicating their skills are parallel to industry needs.</p>
                     </div>
-                    <div class="card swiper-slide">
-                        <div class="card-content">
-                            <h2 class="name" style="color:#013365;">Holistic Curriculum</h2>
-                            <p class="description">The balanced mix of theory, core subjects, breadth areas, soft skills, and projects ensures students are well-rounded and adaptable</p>
-                        </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="card-content">
+                        <h2 class="name" style="color:#013365;">Holistic Curriculum</h2>
+                        <p class="description">The balanced mix of theory, core subjects, breadth areas, soft skills, and projects ensures students are well-rounded and adaptable</p>
                     </div>
-                    <div class="card swiper-slide">
-                        <div class="card-content">
-                            <h2 class="name" style="color:#013365;">Specialization Opportunities</h2>
-                            <p class="description">Elective subjects encourage students to pursue specialized knowledge, making them ideal candidates for roles requiring niche expertise.</p>
-                        </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="card-content">
+                        <h2 class="name" style="color:#013365;">Specialization Opportunities</h2>
+                        <p class="description">Elective subjects encourage students to pursue specialized knowledge, making them ideal candidates for roles requiring niche expertise.</p>
                     </div>
-                    <div class="card swiper-slide">
-                        <div class="card-content">
-                            <h2 class="name" style="color:#013365;">Interdisciplinary Learning</h2>
-                            <p class="description">Exposure to a variety of subjects promotes a diverse skill set, enabling graduates to approach challenges from multiple angles.</p>
-                        </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="card-content">
+                        <h2 class="name" style="color:#013365;">Interdisciplinary Learning</h2>
+                        <p class="description">Exposure to a variety of subjects promotes a diverse skill set, enabling graduates to approach challenges from multiple angles.</p>
                     </div>
-                    <div class="card swiper-slide">
-                        <div class="card-content">
-                            <h2 class="name" style="color:#013365;">Project-Centric Learning</h2>
-                            <p class="description">The focus on projects allows students to apply theoretical knowledge practically, preparing them for real-world scenarios.</p>
-                        </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="card-content">
+                        <h2 class="name" style="color:#013365;">Project-Centric Learning</h2>
+                        <p class="description">The focus on projects allows students to apply theoretical knowledge practically, preparing them for real-world scenarios.</p>
                     </div>
-                    <div class="card swiper-slide">
-                        <div class="card-content">
-                            <h2 class="name" style="color:#013365;">Institute Autonomy</h2>
-                            <p class="description">An academic Senate with industry professionals ensures that the curriculum remains relevant and responsive to industry trends.</p>
-                        </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="card-content">
+                        <h2 class="name" style="color:#013365;">Institute Autonomy</h2>
+                        <p class="description">An academic Senate with industry professionals ensures that the curriculum remains relevant and responsive to industry trends.</p>
                     </div>
-                    <div class="card swiper-slide">
-                        <div class="card-content">
-                            <h2 class="name" style="color:#013365;">IT-Focused Curriculum</h2>
-                            <p class="description">Specializing in IT-related fields from the start shows candidates' alignment with technology-driven industries, meeting modern job demands.</p>
-                        </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="card-content">
+                        <h2 class="name" style="color:#013365;">IT-Focused Curriculum</h2>
+                        <p class="description">Specializing in IT-related fields from the start shows candidates' alignment with technology-driven industries, meeting modern job demands.</p>
                     </div>
-                    <div class="card swiper-slide">
-                        <div class="card-content">
-                            <h2 class="name" style="color:#013365;">Practical Learning Opportunities</h2>
-                            <p class="description">Involvement in projects and hackathons showcases candidates' practical skills and problem-solving abilities</p>
-                        </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="card-content">
+                        <h2 class="name" style="color:#013365;">Practical Learning Opportunities</h2>
+                        <p class="description">Involvement in projects and hackathons showcases candidates' practical skills and problem-solving abilities</p>
                     </div>
                 </div>
             </div>
-
-            <div class="swiper-button-next swiper-navBtn"></div>
-            <div class="swiper-button-prev swiper-navBtn"></div>
-            <div class="swiper-pagination"></div>
         </div>
+
+        <div class="swiper-button-next swiper-navBtn"></div>
+        <div class="swiper-button-prev swiper-navBtn"></div>
+        <div class="swiper-pagination"></div>
     </div>
     <div class="container" style="margin-top: 65px;max-width: 780px;">
         <div class="row">
