feat: added details of all cords

--- a/index.html
+++ b/index.html
@@ -275,17 +275,17 @@
                 <div style="line-height: 12px;">
 
                     <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Harsh Rawat</strong> <strong>20bcs050@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Rishika Kumari</strong> <strong>20bec038@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Garimella Amruthavalli</strong> <strong>20bec014@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Balusu Bhanu Prakash</strong> <strong>20bds012@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Gaurav Agarwal</strong> <strong>20bcs047@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Mohit Saini</strong> <strong>20bcs086@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>B Tarun</strong> <strong>20bcs025@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Poornima</strong> <strong>20bds040@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Kanishk Bajpai</strong> <strong>20bec020@iiitdwd.ac.in</strong></p>
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Rajnish</strong> <strong>20bec035@iiitdwd.ac.in</strong></p>
+                    <!-- <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p> -->
                 </div>
             </div>
         </div>
