fix: colors and fonts

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 />
 
 <style>
-    /* Google Fonts - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+    /* Google Fonts - Hind */
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600&display=swap');
+
+h1{
+    color:#013365;
+}
 
 .slide-container{
   max-width: 1120px;
@@ -46,7 +50,7 @@
   padding-right: 5px;
   padding-left: 5px;
   padding-bottom: 10px;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Hind', sans-serif;
 }
 .description{
   line-height: normal;
@@ -55,7 +59,7 @@
   font-size: 14px;
   color: #090909;
   text-align: left;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Hind', sans-serif;
 }
 
 .swiper-navBtn{
@@ -98,7 +102,7 @@
 <body>
     <div class="container" style="text-align: center;margin-top: 20px;"><img width="258" height="109" src="assets/img/logo2881-e34-200h.png" style="width: 50%;position: relative;height: auto;max-width: 250px;"></div>
     <div class="container" style="margin-top: 65px;max-width: 780px;">
-        <h1 style="font-size: 30px;font-weight: bold;">Overview</h1>
+        <h1 style="font-size: 30px;font-weight: bold; color: #013365;">Overview</h1>
         <p style="margin-top: 10px;">The Career Guidance Cell at IIIT Dharwad is driven by students and assisted by faculty for career development of students.</p>
     </div>
     <div class="container" style="margin-top: 65px;max-width: 780px;">
@@ -115,25 +119,17 @@
         <h1 style="font-size: 30px;font-weight: bold;">Why Recruit from IIIT Dharwad?</h1>
         <div class="row" style="margin-top: 30px;">
             <div class="col-md-4 text-center" style="max-width: 33%;padding-left: 20px;">
-                <h1>8 <strong>LPA</strong></h1>
+                <h1 style="color: #50A5CA;">8 <strong style="color: #013365;">LPA</strong></h1>
                 <p><strong>Median CTC</strong></p>
             </div>
             <div class="col text-center" style="max-width: 33%;padding-left: 20px;">
-                <h1>35 <strong>LPA</strong></h1>
+                <h1 style="color: #50A5CA;">35 <strong style="color: #013365;">LPA</strong></h1>
                 <p><strong>Highest CTC</strong></p>
             </div>
             <div class="col text-center" style="max-width: 33%;padding-left: 20px;">
-                <h1>11 <strong>LPA</strong></h1>
+                <h1 style="color: #50A5CA;">11 <strong style="color: #013365;">LPA</strong></h1>
                 <p><strong>Average CTC</strong></p>
             </div>
-        </div>
-    </div>
-    <div class="container" style="margin-top: 65px;max-width: 780px;">
-        <h1 style="font-size: 30px;font-weight: bold;">Offered Placement CTC</h1>
-
-        <!-- <p>Paragraph</p> -->
-        <div>
-            <canvas id="myChart"></canvas>
         </div>
     </div>
     <div class="slide-container swiper mt-2">
@@ -195,12 +191,20 @@
         <div class="swiper-pagination"></div>
     </div>
     <div class="container" style="margin-top: 65px;max-width: 780px;">
+        <h1 style="font-size: 30px;font-weight: bold;">Offered Placement CTC</h1>
+
+        <!-- <p>Paragraph</p> -->
+        <div>
+            <canvas id="myChart"></canvas>
+        </div>
+    </div>
+    <div class="container" style="margin-top: 65px;max-width: 780px;">
         <div class="row">
             <div class="col-sm-6 col-md-6 col-lg-8">
-                <h1 style="font-size: 27.88px;text-align: left;"><br>Average Package of top 20% students in 2023.</h1>
+                <h1 style="font-size: 47.88px;text-align: left; "><br><strong> Average Package of top 20% students in 2023.</strong></h1>
             </div>
             <div class="col-sm-5 col-md-6 col-lg-3 col-xl-3 d-flex align-items-end">
-                <h1 style="font-size: 48.88px;"><span style="font-size: 83.88px;"><strong>19.5</strong><span style="font-size: 30.88px;margin-left: 5px;"><strong>LPA</strong></span></span></h1>
+                <h1 style="font-size: 48.88px; color: #013365;"><span style="font-size: 83.88px;"><strong style="color: #50A5CA;">19.5</strong><span style="font-size: 30.88px;margin-left: 5px;"><strong>LPA</strong></span></span></h1>
             </div>
         </div>
     </div>
