--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ h1{
     <div class="container" style="margin-top: 65px;max-width: 780px;">
         <div class="row">
             <div class="col-sm-6 col-md-6 col-lg-8">
-                <h1 style="font-size: 47.88px;text-align: left; "><br><strong> Average Package of top 20% students in 2023.</strong></h1>
+                <h1 style="font-size: 35px;text-align: left; "><br><strong> Average Package of top 20% students in 2023.</strong></h1>
             </div>
             <div class="col-sm-5 col-md-6 col-lg-3 col-xl-3 d-flex align-items-end">
                 <h1 style="font-size: 48.88px; color: #013365;"><span style="font-size: 83.88px;"><strong style="color: #50A5CA;">19.5</strong><span style="font-size: 30.88px;margin-left: 5px;"><strong>LPA</strong></span></span></h1>
@@ -278,6 +278,7 @@ h1{
                 <h1 style="font-size: 16px;"><strong>Student Coordinators</strong></h1>
                 <div style="line-height: 12px;">
 
+                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Siddhant Dixit</strong> <strong>20bcs123@iiitdwd.ac.in</strong></p>
                     <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p>
                     <p style="font-size: 12px;margin-bottom: 8px;"><strong>Harsh Rawat</strong> <strong>20bcs050@iiitdwd.ac.in</strong></p>
                     <p style="font-size: 12px;margin-bottom: 8px;"><strong>Rishika Kumari</strong> <strong>20bec038@iiitdwd.ac.in</strong></p>
@@ -289,7 +290,6 @@ h1{
                     <p style="font-size: 12px;margin-bottom: 8px;"><strong>Poornima</strong> <strong>20bds040@iiitdwd.ac.in</strong></p>
                     <p style="font-size: 12px;margin-bottom: 8px;"><strong>Kanishk Bajpai</strong> <strong>20bec020@iiitdwd.ac.in</strong></p>
                     <p style="font-size: 12px;margin-bottom: 8px;"><strong>Rajnish</strong> <strong>20bec035@iiitdwd.ac.in</strong></p>
-                    <!-- <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong> <strong>20bds013@iiitdwd.ac.in</strong></p> -->
                 </div>
             </div>
         </div>
