[Fix] Font size changed

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     <div class="col">
                         <form method="get" action="assets/files/SRF-without-intership.docx">
                             <button class="btn btn-primary" type="submit"
-                                style="width: 100%;background: #013365;border-style: none;height: 50px;"><strong>Campus
+                                style="width: 100%;background: #013365;border-style: none;height: 50px; font-size: 0.75rem;"><strong>Campus
                                     Recruitment form (w/o internship)</strong></button>
                         </form>
                     </div>
@@ -375,7 +375,7 @@
                     <div class="col">
                         <form method="get" action="assets/files/SRF-with-intership.docx">
                             <button class="btn btn-primary" type="submit"
-                                style="width: 100%;background: #013365;border-style: none;height: 50px;"><strong>Campus
+                                style="width: 100%;background: #013365;border-style: none;height: 50px; font-size: 0.75rem;"><strong>Campus
                                     Recruitment form (With internship)</strong></button>
                         </form>
                     </div>
