[Fix]: Color Fixed

--- a/commitee_page/program-commitee-page.html
+++ b/commitee_page/program-commitee-page.html
@@ -58,7 +58,7 @@ img{
 
     <!-- CONTENT -->
   <div class="container-fluid" style="text-align: center;">
-  <h1 id="head">CGC Committee </h1>
+  <h1 style="color: #013365;" id="head">CGC Committee </h1>
 
   <hr>
 
@@ -169,7 +169,7 @@ img{
     <br/>
     <hr>
     <div class="container-fluid" style="text-align: center;">
-      <h1 id="head">Student Coordinators Team </h1>
+      <h1 style="color:#013365" id="head">Student Coordinators Team </h1>
     <hr>
     <div class="row">
 
