--- a/index.html
+++ b/index.html
@@ -391,9 +391,11 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="row" style="text-align: center;">
-            <div class="col"><button class="btn btn-primary" type="button" style="width: 40%;background: #013365;margin-top: 18px;border-style: none;height: 50px;"><strong>CGC Website Team</strong></button></div>
-        </div> -->
+        <form action="commitee_page/cgc-commitee.html">
+            <div class="row" style="text-align: center;">
+                <div class="col"><button class="btn btn-primary" type="submit" style="width: 40%;background: #013365;margin-top: 18px;border-style: none;height: 50px;"><a> <strong>CGC Commitee</strong></button></div>
+            </div>
+        </form>
     </div>
     <div class="container" style="margin-top: 65px;max-width: 780px;">
         <h1 style="font-size: 30px;font-weight: bold;"></h1>
