[Fix]: CGC Office Email

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <p style="margin-top: 10px;">For any inquiries or if you would like to participate in recruitment activities at
             IIIT Dharwad,
             please contact the Career Guidance Cell (CGC) via email at <a
-                href="mailto:cgc@iiitdwd.ac.in">cgc@iiitdwd.ac.in</a>.
+                href="mailto:cgcoffice@iiitdwd.ac.in">cgcoffice@iiitdwd.ac.in</a>.
         <div class="row" style="margin-top: 25px;">
             <div class="col">
                 <h2 style="font-size: 18px;font-weight: bold;">CGC, Chairman</h2>
